# greenbuttonengine

./: .gitignore  Cargo.toml  LICENSE.md  README.md
cli-frontend/: Cargo.toml
cli-frontend/src/: main.rs
cli-frontend/tests/: goldens.rs  record_goldens.sh
cli-frontend/tests/goldens/: golden.parquet
docs/: index.html
docs/assets/: index-B1mlo04-.js  index-B1rhm3SI.js  index-CDTjUJi0.js  index-CSozm4Jb.js  index-CWZXwm7P.css  index-DGgs3JEw.css  index-DTmrtxgK.js  index-DwtqYBks.js  index-h3OJxbwt.js  wasm_bg-BGM4Tm-N.wasm  wasm_bg-C3op214H.wasm  wasm_bg-CgRpNzCs.wasm  wasm_bg-ChLEVBzv.wasm  wasm_bg-CpjlZQiX.wasm  wasm_bg-DzX0MQJ0.wasm  wasm_bg-lSkmpGvl.wasm
lib/columnar_struct_vec/: Cargo.toml  README.md
lib/columnar_struct_vec/src/: lib.rs
lib/columnar_struct_vec/tests/: columnar_struct_vec_tests.rs  tests.rs
lib/personalgreenbutton/: Cargo.toml  build.rs
lib/personalgreenbutton/benches/: parse_test_files.rs
lib/personalgreenbutton/preprocessing/: espi.xsd.xml
lib/personalgreenbutton/src/: content.rs  entry.rs  gb_type_details.rs  interval_reading.rs  lib.rs  local_time_parameters.rs  parquet_column_writers.rs  parse_helpers.rs  reading_type.rs  time_period.rs  timeseries.rs
lib/wasm/: Cargo.toml
lib/wasm/src/: lib.rs
test_files/: EGD_Gas_EnergyUsage_20221225_20241225.xml
web-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-frontend/src/: index.css  main.ts
web-frontend/src/charts/: date_aggregated_chart.ts  date_aggregated_chart_renderer.ts  date_aggregated_charts.ts
