[package]
name = "greenbutton-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
personalgreenbutton = { path = "../lib/personalgreenbutton" }
anyhow = "1.0.86"
clap = { version = "4.5.23", features = ["derive"] }
# Make sure we've got positions available for debugging. We want to
# avoid the binary size bloat for the wasm use case.
roxmltree = { version = "0.19.0", default-features = true, features = [
    "positions",
] }
